2.7.8 
- Fix - Remove Extrafanart Limit for Eden version
- Change - Use the JSON format of the Fanart.TV API
- Change - remove the old 'get recognized artists' in favour of the new New Music from Fanart.TV

2.7.7
- Fix - Add time delay to MusicBrainz Release MBID to Release Group MBID function
- Fix - Build a new Database if one does not exist during an Update(mainly for The Scheduler)
- Add - Extrafanart download limit

2.7.6
- Fix - Single artwork download
- Fix - clean up recognized artist code
- Change - skip artist if Distant MBID is missing, no point bugging fanart.tv for something it already reported that it does not have.
- Add - Use internal XBMC Library MBID's if available
- Fix - Frodo changes
- Add - option to enable/disable replacing trailing period with illegal character replacement character

2.7.5
- Add - skin property for scheduler service script
- Add - ability to update database from outside of script
- Fix - errors when update runs in background
- Add - cache fanart.tv data for when The Scheduler is used(adjustable, preset to 3 days, but adjustable from 1 to 7)
- Fix - MusicBrainz xml changes
- Add - illegal character replacement in artist name for saving
- Fix - script was downloading the same artwork(clearLOGOs)
- Change - change method to create dialogs and logging

2.7.4
- Add - Add support for the new Artwork available from fanart.tv(HD Music Logos, Music Banners)
- Add - Add setting to enable/disable the New HD Music logos, enabled will overwrite older clearLOGO during an auto download
- Add - Add autobanner to the auto download start mode
- Update - Updated French strings - Thanks Hellnino18
- Update - Updated German strings - Thanks solidsatras

2.7.3
- Fix - Change LF to CRLF in missing.txt file
- Fix - keep script functioning with XBMC Development Master
- Add - script can be started in artwork auto download modes, modes - autocdart, autocover, autofanart, autologo, autothumb, autoall. All these are done in the background